# esp-iot-solution

./: .gitignore  .gitlab-ci.yml  .gitmodules  .lbcf.yml  .pre-commit-config.yaml  .readthedocs.yml  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING.rst  Makefile  README.md  README_CN.md  codespell-ignore-list  component.cmake  component.mk  conftest.py  issue_template.md  pytest.ini  readme.md  sdkconfig
components/bluetooth/ble_conn_mgr/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  idf_component.yml
components/bluetooth/ble_services/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  idf_component.yml
components/bootloader_support_plus/: CHANGELOG.md  CMakeLists.txt  Kconfig.projbuild  README.md  README_CN.md  idf_component.yml
components/bootloader_support_plus/include/: bootloader_custom_ota.h
components/bootloader_support_plus/private_include/: bootloader_custom_image_format.h  bootloader_custom_malloc.h  bootloader_custom_utility.h  bootloader_decompressor_common.h  bootloader_decompressor_xz.h  bootloader_storage_flash.h
components/bootloader_support_plus/src/: bootloader_custom_image_format.c  bootloader_custom_malloc.c  bootloader_custom_ota.c  bootloader_custom_utility.c  bootloader_decompressor_common.c  bootloader_decompressor_xz.c  bootloader_storage_flash.c
components/button/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  button.c  button_adc.c  button_gpio.c  button_matrix.c  button_obj.cpp  button_rtc.c  button_test.c  component.mk  idf_component.yml  iot_button.c
components/button/include/: button.h  button_adc.h  button_gpio.h  button_matrix.h  button_rtc.h  button_types.h  iot_button.h
components/button/interface/: button_interface.h
components/button/test/: CMakeLists.txt  button_obj_test.cpp  button_test.c
components/button/test_apps/: CMakeLists.txt  pytest_button.py  sdkconfig.ci.pm
components/dali/: CHANGELOG.md  CMakeLists.txt  Kconfig  Kconfig.projbuild  LICENSE  README.md  README_cn.md  dali.c  idf_component.yml
components/dali/include/: dali.h  dali_color_control_dt8.h  dali_command.h  dali_control_device.h  dali_control_gear.h  dali_device_sensors.h  dali_system_components.h
components/dali/src/: dali.c  dali_color_control_dt8.c  dali_control_device.c  dali_control_gear.c  dali_device_sensors.c  dali_system_components.c
components/dali/test_apps/: CMakeLists.txt  partitions.csv  pytest_dali.py  sdkconfig.defaults
components/display/gdisp/: CMakeLists.txt  Kconfig  component.mk  iot_lcd.c  iot_lcd.h
components/display/lvgl_port/: 0001-bugfix-lcd-Fixed-PPA-freeze.patch  CMakeLists.txt  Kconfig.projbuild  lvgl_fps_stats.c  lvgl_fps_stats.h  lvgl_port.h
components/display/touch_panel/: CMakeLists.txt  Kconfig  component.mk  iot_touch.c  iot_touch.h  touch_panel.c  touch_panel.h
components/elf_loader/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  check_shared_object.cmake  elf_loader.cmake  idf_component.yml  linker.lf  project_include.cmake
components/elf_loader/include/: esp_dlfcn.h  esp_elf.h
components/elf_loader/src/: esp_all_symbol.c  esp_elf.c  esp_elf_adapter.c  esp_elf_symbol.c
components/elf_loader/tool/: symbols.py
components/esp_weaver/: CMakeLists.txt  Kconfig  README.md  README_CN.md  idf_component.yml  project_include.cmake
components/esp_weaver/include/: esp_weaver.h  esp_weaver_standard_params.h  esp_weaver_standard_types.h
components/esp_weaver/src/: esp_weaver.c  esp_weaver_local_ctrl.c
components/esp_weaver/test_apps/: CMakeLists.txt  README.md  pytest_weaver.py  sdkconfig.ci.api_test  sdkconfig.defaults
components/esp_weaver/tools/: apply_patches.py
components/esp_xiaozhi/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  README_CN.md  idf_component.yml
components/esp_xiaozhi/include/: esp_xiaozhi_camera.h  esp_xiaozhi_chat.h  esp_xiaozhi_info.h  esp_xiaozhi_nvs_ops.h  esp_xiaozhi_video.h
components/esp_xiaozhi/src/: esp_xiaozhi_board.c  esp_xiaozhi_camera.c  esp_xiaozhi_chat.c  esp_xiaozhi_info.c  esp_xiaozhi_keystore.c  esp_xiaozhi_mcp.c  esp_xiaozhi_mqtt.c  esp_xiaozhi_payload.c  esp_xiaozhi_transport.c  esp_xiaozhi_video.c  esp_xiaozhi_vision.c  esp_xiaozhi_websocket.c
components/esp_xiaozhi/test_apps/: CMakeLists.txt  README.md  pytest_esp_xiaozhi.py  sdkconfig.defaults
components/esp_xmodem/: .gitignore  CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  idf_component.yml  license.txt
components/esp_xmodem/include/: esp_xmodem.h  esp_xmodem_transport.h
components/esp_xmodem/private_include/: esp_xmodem_priv.h
components/esp_xmodem/src/: esp_xmodem_common.c  esp_xmodem_receiver.c  esp_xmodem_sender.c  esp_xmodem_transport.c
components/extended_vfs/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  idf_component.yml
components/extended_vfs/include/: ext_vfs.h
components/extended_vfs/private_include/: ext_vfs_export.h
components/extended_vfs/src/: ext_vfs.c  ext_vfs_gpio.c  ext_vfs_i2c.c  ext_vfs_ledc.c  ext_vfs_spi.c
components/features/touchpad/: CMakeLists.txt  Kconfig  README.md  component.mk  touchpad.c  touchpad_obj.cpp
components/gprof/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  gprof.cmake  idf_component.yml
components/gprof/include/: gprof.h
components/gprof/private_include/: gprof_types.h
components/gprof/scripts/: gprof.py
components/gprof/src/: esp_gprof.c
components/gui/lvgl_gui/: CMakeLists.txt  Kconfig  component.mk  lvgl.c  (+5 more)
components/i2c_bus/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  i2c_bus.c  i2c_bus_soft.c  i2c_bus_v2.c  idf_component.yml
components/imu_quaternion/: CHANGELOG.md  CMakeLists.txt  README.md  idf_component.yml  license.txt
components/keyboard_button/: CHANGELOG.md  CMakeLists.txt  README.md  idf_component.yml  keyboard_button.c
components/knob/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  idf_component.yml  iot_knob.c  iot_knob.h  knob_gpio.c  knob_rtc.c
components/mcp-c-sdk/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  README_CN.md  idf_component.yml
components/zero_detection/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  idf_component.yml  zero_detection.c
(+6445 files in other folders)
